tests/build/unsupported_into.stderr
error[E0277]: the trait bound `Test: IntoPy<Py<PyAny>>` is not satisfied
 --> tests/build/unsupported_into.rs:9:5
  |
9 |     test: Test,
  |     ^^^^^^----
  |     |     |
  |     |     required by a bound introduced by this call
  |     the trait `IntoPy<Py<PyAny>>` is not implemented for `Test`
  |
  = help: the following other types implement trait `IntoPy<T>`:
            <bool as IntoPy<Py<PyAny>>>
            <char as IntoPy<Py<PyAny>>>
            <isize as IntoPy<Py<PyAny>>>
            <i8 as IntoPy<Py<PyAny>>>
            <i16 as IntoPy<Py<PyAny>>>
            <i32 as IntoPy<Py<PyAny>>>
            <i64 as IntoPy<Py<PyAny>>>
            <i128 as IntoPy<Py<PyAny>>>
          and $N others
